Disable buggy GTK set_event_compression(false)

Because of https://gitlab.gnome.org/GNOME/gtk/-/issues/4946, we
cannot disable event compression, so we re-enable it until fixed.

Fixes https://gitlab.com/inkscape/inkscape/-/issues/3626